--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
-  "name": "project3",
+  "name": "shopping-app",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
+    "express": "^4.16.4",
+    "ora": "^3.0.0",
+    "pg": "^7.8.0",
+    "pg-hstore": "^2.3.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "sequelize": "^4.42.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "db:init": "dropdb --if-exists shopping_app_db && createdb shopping_app_db",
+    "db:reset": "node ./scripts/resetDb",
+    "db:seed": "node ./scripts/seed",
+    "server": "nodemon server",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"react-scripts start\"",
+    "start": "concurrently --kill-others-on-fail \"node server.js\" \"react-scripts start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +37,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  }
 }
