--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
     "react": "^16.7.0",
