--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "db:reset": "node ./scripts/resetDb",
     "db:seed": "node ./scripts/seed",
     "server": "nodemon server.js",
+    "heroku-postbuild": "npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"react-scripts start\"",
     "start": "concurrently --kill-others-on-fail \"node server.js\" \"react-scripts start\""
   },
